# ts2graph

./: .gitignore  experiments.sh  install.sh  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
configs/affinity/: gaussian_kernel.yaml
configs/dataset/: airq_small.yaml
configs/distance/: masked_euclidean.yaml
configs/experiment/: baseline.yaml
configs/graph/: base.yaml  ed_rbf_topk.yaml  empty.yaml  fc.yaml  geo_rbf_thresh.yaml
configs/model/: stgi.yaml
configs/sparsifier/: empty.yaml  threshold.yaml  topk.yaml
configs/sweep/: fine.yaml  medium.yaml
configs/training/: default.yaml
cyext/: temporal_graphs.pyx
datasets/: air_quality.py  dataloader.py  datamodule.py  synthetic.py
datasets/dataloaders/: air_quality.py  graphloader.py  synthetic.py
datasets/scalers/: abstract_scaler.py  grin_scaler.py  min_max_scaler.py  standard_scaler.py
datasets/utils/: utils.py
docs/: index.html  style.css
downstream/: stgn.py  trainer.py
experiments/: batch_size_experiments.sh  blackout_experiments.sh  epochs_experiments.sh  experiments.sh  hidden_size_experiments.sh  iteration_experiments.sh  knn_experiments.sh  knn_graphs_stats.sh  learning_rate_experiments.sh  loc_experiments.sh  loc_graphs_stat.sh  naive_experiments.sh  output_size_experiments.sh  qn_experiments.sh  radius_experiments.sh  radius_graphs_stat.sh  rec_experiments.sh  self_loop_experiments.sh  simple_experiments.sh  vis_experiments.sh
graphs_transformations/: knn.py  proximity_graphs.py  temporal_graphs.py  ts2net.py  utils.py
graphs_transformations/ts2graph_rs/: Cargo.toml  build.rs  pyproject.toml
graphs_transformations/ts2graph_rs/src/: lib.rs
graphs_transformations/ts2graph_rs/src/graph/: mod.rs  temporal.rs
graphs_transformations/ts2graph_rs/src/graph/temporal/: k_hop.rs  mod.rs  neighbor_search.rs  recurrence.rs  visibility.rs
graphs_transformations/ts2graph_rs/src/python_bindings/: bindings.rs  conversions.rs  mod.rs
graphs_transformations/ts2graph_rs/src/utils/: mod.rs  utils.rs
graphs_transformations/ts2graph_rs/tests/: integration_tests.rs  neighbor_search.rs  recurrence.rs
graphs_transformations/ts2graph_rs/tests/temporal/recurrence/: recurrence_tests.rs
graphs_transformations/ts2graph_rs/tests/temporal/recurrence/neighbor_search/: neighbor_search_tests.rs
utils/: callbacks.py  helpers.py  numpy_metrics.py  progess.py
(+74 files in other folders)
