[package]
name = "ts2graph_rs"
version = "0.1.0"
edition = "2024"
authors = ["Flavien Buron"]

[lib]
name = "ts2graph_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
required_features = ["perf"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
ndarray = "0.15"
numpy = "0.25"
tch = { version = "0.18.1", features = ["cpython"] }
itertools = "0.14.0"
extendr-api = "0.8.1"
rand = "0.9.2"
extendr-engine = "0.8.1"
kdtree = "0.7.0"
petgraph = "0.8.2"
rayon = "1.10.0"
rand_chacha = "0.9.0"
pprof = { version = "0.15.0", features = ["flamegraph", "protobuf-codec"]}
flamegraph = "0.6.8"

[features]
integration = []
perf = []

[dev-dependencies]
criterion = "0.5"

[package.metadata.maturin]
# Configuration for maturin (Python package building)
python-source = "python"
module-name = "ts2graph_rs"

[profile.release]
debug = 1
lto= true
