[package]
name = "ts2graph_rs"
version = "0.1.0"
edition = "2024"
authors = ["Flavien Buron"]

[lib]
name = "ts2graph_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
ndarray = "0.15"
numpy = "0.25"
tch = { version = "0.18.1", features = ["cpython"] }
itertools = "0.14.0"


[dev-dependencies]
criterion = "0.5"

[package.metadata.maturin]
# Configuration for maturin (Python package building)
python-source = "python"
module-name = "ts2graph_rs"
